# Frequency_analyzer

./: CMakeLists.txt  Makefile  main.cpp  serialreader.cpp  serialreader.h
src/: Frequency_analyzer.cpp  Frequency_analyzer.h  Frequency_analyzer.ui  main.cpp
